--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,7 +3,7 @@
     <script type="text/javascript" charset="utf-8">
       (function(){
         var param = {
-          url: 'http://beiyuu.com{{ page.url }}',
+          url: 'http://henryyang1993.github.io{{ page.url }}',
           type: '6',
           title: '《{{ page.title }}》' + '- {{ page.description }}',
           ralateUid: '1855270953',
@@ -18,6 +18,6 @@
     </script>
   </div>
 
-  <a href="#" class="comment" onclick="return false;">点击查看评论</a>
+  <a href="#" class="comment" onclick="return false;">view comments</a>
   <div id="disqus_thread"></div>
 </div>
