--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,7 +59,7 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="/resume/avatar/glasses.jpg" class="img-circle" />
+				<img src="/favicon.ico" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
