--- a/_includes/post.html
+++ b/_includes/post.html
@@ -92,7 +92,7 @@
       </section>
 
       <section class="col-sm-6 author">
-        <img src="/resume/avatar/glasses.jpg" class="img-rounded author-image" />
+        <img src="/favicon.ico" class="img-rounded author-image" />
         <h4 class="section-title author-name">{{site.author.name}}</h4>
         <p class="author-bio">{{site.author.bio}}</p>
       </section>
