update resume link at github.io

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
 		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
 	</a>
 	<h3 class="title">
-        <a href="https://www.dropbox.com/s/1t4ddb1tap5vw61/Hanyu_Yang_Resume.pdf?dl=0" target="_blank">{{ site.author.name }}</a>
+        <a href="https://drive.google.com/file/d/1XOdE2YLtwaVhE-DQP2szXK-ZyjfrIkhc/view" target="_blank">{{ site.author.name }}</a>
     </h3>
 </header>
 
